# QtPoolThread

./: .gitignore  CMakeLists.txt  README-RU.md  README.md  main.cpp  poolthreadtaskingqt.cpp  poolthreadtaskingqt.h  poolthreadtaskingqt.ui  test.cpp  test.h  timer.h
pool_thread/: poolthread.cmake  poolthread.cpp  poolthread.h
test/: test.cmake  test.cpp  test.h  vis.cpp  vis.h  vis.ui
timer/: timer.cmake  timer.cpp
